Fix overflow issues

--- a/src/scss/components/weather/_filters.scss
+++ b/src/scss/components/weather/_filters.scss
@@ -1,6 +1,6 @@
 .filters {
   display: flex;
-  overflow-x: scroll;
+  overflow-x: auto;
   margin-bottom: $padding / 2;
 
   &__single {
