--- a/src/scss/components/weather/_hourly-forecast.scss
+++ b/src/scss/components/weather/_hourly-forecast.scss
@@ -1,11 +1,12 @@
 .hourly-forecast {
+  overflow: hidden;
   &__outer {
     position: relative;
   }
 
   &__wrap {
     display: flex;
-    overflow-x: scroll;
+    overflow-x: auto;
   }
 
   &__day {
